<?xml version="1.0" encoding="utf-8"?>





<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/coumuniti">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/menuButton"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/menu"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="9dp"/>
            
            <ImageButton
                android:id="@+id/plusButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/plus"
                android:layout_marginLeft="370dp"
                />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <!-- *********************************************-->



    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/draw"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--主界面-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">
            <ScrollView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="337dp"
                    android:layout_height="395dp"
                    android:layout_marginTop="170dp"
                    android:background="@drawable/title1" />

                <ImageView
                    android:id="@+id/image2"
                    android:layout_marginTop="20dp"
                    android:layout_width="337dp"
                    android:layout_height="395dp"
                    android:background="@drawable/title1"/>





            </LinearLayout>
            </ScrollView>



        </LinearLayout>
        <!-- 底部导航栏-->




        <!-- 侧滑页面-->

        <LinearLayout
            android:layout_width="297dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="@drawable/backgroundcolor1"
            android:orientation="vertical">

            <!--**********************-->

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_header_height"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:theme="@style/ThemeOverlay.AppCompat.Dark">

                <ImageButton
                    android:id="@+id/loginChange_Activity"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/nav_header_desc"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:background="@drawable/profile" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:text="@string/nav_header_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/email_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav_header_subtitle" />
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/black" />

            <!-- 以下是侧滑页面的中央菜单 日后可能会使用item 进行代替现在的-->


            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/noticeIbn"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:layout_gravity="center"
                            android:layout_width="116dp"
                            android:layout_height="30dp"
                            android:background="@drawable/notice"/>

                        <ImageButton
                            android:id="@+id/SmartOrder"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:layout_gravity="center"
                            android:layout_width="161dp"
                            android:layout_height="30dp"
                            android:background="@drawable/smartb"/>

                        <ImageButton
                            android:id="@+id/ComIb"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:layout_gravity="center"
                            android:layout_width="116dp"
                            android:layout_height="30dp"
                            android:background="@drawable/comimb"/>

                        <ImageButton
                            android:id="@+id/foodIbn"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:layout_gravity="center"
                            android:layout_width="138dp"
                            android:layout_height="30dp"
                            android:background="@drawable/foodimb"/>

                        <ImageButton
                            android:id="@+id/bechelorIbn"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:layout_gravity="center"
                            android:layout_width="116dp"
                            android:layout_height="30dp"
                            android:background="@drawable/bechelor"/>

                        <ImageButton
                            android:id="@+id/SchoolWeb"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:layout_gravity="center"
                            android:layout_width="231dp"
                            android:layout_height="30dp"
                            android:background="@drawable/schoolweb"/>


                    </LinearLayout>

                </ScrollView>


            </LinearLayout>






            <!-- 侧边栏内部 底部按钮-->

            <RelativeLayout
                android:gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <ImageButton
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:id="@+id/settingImb"
                    android:background="@drawable/setting1"/>



            </RelativeLayout>



        </LinearLayout>



    </androidx.drawerlayout.widget.DrawerLayout>




</LinearLayout>